@@ -1,66 +1,66 @@
 package Entrega2;
 
+import java.util.LinkedList;
 import java.util.Random;
 import java.util.concurrent.BrokenBarrierException;
 import java.util.concurrent.CyclicBarrier;
 import java.util.concurrent.Semaphore;
 import java.util.concurrent.locks.Lock;
 import java.util.concurrent.locks.ReentrantLock;
-import java.util.ArrayList;
 
 public class Restaurante {
     public static class Mesa {
         private final Semaphore lugares = new Semaphore(5);
-        private final ArrayList<Cliente> filaEspera = new ArrayList<>();
+        private final LinkedList<Cliente> filaEspera = new LinkedList<>();
         private final Lock lock = new ReentrantLock();
-        private CyclicBarrier barrier = new CyclicBarrier(5, () -> {
-            System.out.println("Clientes saindo juntos...");
-            lugares.release(5);
-            for (int i = 1; i <= 5; i++) {
+        private CyclicBarrier barrier;
+
+        public Mesa() {
+            resetBarrier();
+        }
+
+        private void resetBarrier() {
+            barrier = new CyclicBarrier(5, () -> {
+                System.out.println("Clientes saindo juntos...");
+                lugares.release(5);
                 notificarProximoCliente();
-            }
-        });
+            });
+        }
 
         public void chegarNoRestaurante(Cliente cliente) {
             System.out.println("Cliente " + cliente.getId() + " chegou no restaurante.");
             try {
-                if (lugares.tryAcquire() && filaEspera.isEmpty()) {
+                lock.lock();
+                if (lugares.tryAcquire()) {
+                    lock.unlock();
                     jantar(cliente);
                 } else {
-                    irParaFila(cliente);
+                    filaEspera.add(cliente);
+                    System.out.println("Cliente " + cliente.getId() + " está esperando na fila.");
+                    lock.unlock();
                 }
             } catch (Exception e) {
-                throw new RuntimeException(e);
-            }
-        }
-
-        public void jantar(Cliente cliente) {
-            System.out.println("Cliente " + cliente.getId() + " está comendo.");
-            try {
-                Thread.sleep(3000);
-                verificarSaida(cliente);
-            } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
-                throw new RuntimeException(e);
-            }
-        }
-
-        public void irParaFila(Cliente cliente) {
-            lock.lock();
-            try {
-                filaEspera.add(cliente);
-                System.out.println("Cliente " + cliente.getId() + " está esperando na fila.");
-            } finally {
                 lock.unlock();
+                throw new RuntimeException(e);
             }
+        }
+
+        public void jantar(Cliente cliente) throws InterruptedException {
+            System.out.println("Cliente " + cliente.getId() + " está jantando.");
+            Thread.sleep(2000); // Tempo de jantar
+            verificarSaida(cliente);
         }
 
         public void verificarSaida(Cliente cliente) {
             try {
                 if (lugares.availablePermits() == 0 && !filaEspera.isEmpty()) {
-                    System.out.println("Cliente " + cliente.getId() + " terminou de comer e está esperando os outros.");
+                    System.out.println("Cliente " + cliente.getId() + " terminou de jantar e está esperando os outros.");
                     barrier.await();
+                    if (barrier.getNumberWaiting() == 0) {
+                        resetBarrier();
+                    }
                 } else {
+                    System.out.println("Cliente " + cliente.getId() + " terminou de jantar e saiu sozinho.");
                     sair(cliente);
                 }
             } catch (InterruptedException | BrokenBarrierException e) {
@@ -70,21 +70,28 @@ public class Restaurante {
         }
 
         public void sair(Cliente cliente) {
-            System.out.println("Cliente " + cliente.getId() + " terminou de comer e saiu.");
             lugares.release();
             notificarProximoCliente();
         }
 
         private void notificarProximoCliente() {
+            lock.lock();
             try {
-                while (!filaEspera.isEmpty() && lugares.availablePermits() > 0) {
-                    Cliente proximoCliente = filaEspera.remove(0);
+                while (lugares.availablePermits() > 0 && !filaEspera.isEmpty()) {
+                    Cliente proximoCliente = filaEspera.removeFirst();
                     lugares.acquire();
-                    jantar(proximoCliente);
+                    new Thread(() -> {
+                        try {
+                            jantar(proximoCliente);
+                        } catch (InterruptedException e) {
+                            Thread.currentThread().interrupt();
+                        }
+                    }).start();
                 }
             } catch (InterruptedException e) {
-                Thread.currentThread().interrupt();
                 throw new RuntimeException(e);
+            } finally {
+                lock.unlock();
             }
         }
     }
@@ -111,7 +118,7 @@ public class Restaurante {
         Mesa mesaUnica = new Mesa();
         Random random = new Random();
 
-        for (int i = 1; i <= 10; i++) {
+        for (int i = 1; i <= 100; i++) {
             Cliente cliente = new Cliente(mesaUnica, i);
             Thread thread = new Thread(cliente);
             thread.start();
